@@ -109,8 +109,9 @@ Changelog for 1.3.37
 * Fixed join projection issues in AP Outstanding (Chris T, 950)
 * Added Apache 2.4 configuration file (Chris T)
 * Fixed "save info" reporting "Draft Posted" (Chris T, 925)
-* Fixed saveto causing db error on sales invoice (Chris T, 929)
-* Fixed saveto including all addresses (Chris T, 929)
+* Fixed shipto causing db error on sales invoice (Chris T, 929)
+* Fixed shipto including all addresses (Chris T, 929)
+* Fixed shipto address not showing on invoice (Chris T, 929)
 
 Changelog for 1.3.36
 * Set default date for AP invoice creation to current date (Chris T)
